--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
         jackOptions {
             enabled true
         }
@@ -50,7 +51,8 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     //compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
-
+    compile 'com.google.android.gms:play-services:9.8.0'
+    compile 'com.android.support:multidex:1.0.1'
 
 
     testCompile 'junit:junit:4.12'
